DataGrid: Fix displaying unnecessary vertical scrollbar on iOS if columnAutoWidth is enabled (T681714) (#5969)

--- a/styles/widgets/ios7/scrollable.ios7.less
+++ b/styles/widgets/ios7/scrollable.ios7.less
@@ -1,9 +1,3 @@
-.dx-scrollable-native {
-    .dx-scrollable-content {
-        min-height: 101%;
-    }
-}
-
 .dx-scrollable-scroll {
     margin: 2px;
     border-radius: 2px;
